# EUCAIBigBoy

./: README.md
chat-workbench-main/: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  config.yaml.example  docker-compose.yml  mypy.ini  package-lock.json  pyproject.toml  pyrefly.toml
chat-workbench-main/.github/workflows/: main.yml
chat-workbench-main/backend/: README.md  pyproject.toml
chat-workbench-main/backend/app/: config.py  models.py  monitoring.py  tracing.py  utils.py  version.py
chat-workbench-main/backend/app/api/: app.py  main.py  state.py  websocket.py
chat-workbench-main/backend/app/clients/: base.py  container.py  registry.py
chat-workbench-main/backend/app/repositories/: base.py  chat.py  message.py  persona.py  prompt.py  task_handler_metadata.py
chat-workbench-main/backend/app/services/: __init__.py  chat.py  content_storage.py  event_utils.py  model_capabilities.py
chat-workbench-main/backend/app/task_handlers/: base.py  models.py  registry.py
chat-workbench-main/backend/tests/: __init__.py  conftest.py  test_config.py  test_models.py  test_monitoring.py  test_version.py
chat-workbench-main/backend/tests/api/: __init__.py  test_chat_endpoints.py
chat-workbench-main/backend/tests/clients/: __init__.py  test_base_client.py
chat-workbench-main/backend/tests/models/: __init__.py  test_models.py
chat-workbench-main/backend/tests/repositories/: __init__.py  test_base.py  test_chat_repository.py  test_message_repository.py
chat-workbench-main/backend/tests/services/: __init__.py  test_chat_service.py  test_content_storage.py  test_event_processor.py  test_model_capabilities.py  test_streaming_service.py
chat-workbench-main/backend/tests/task_handlers/: __init__.py  test_chat_handler.py  test_chat_handler_basic.py  test_demo_handler.py
chat-workbench-main/backend/tests/utils/: __init__.py  test_utils.py
chat-workbench-main/cli/: Cargo.toml  README.md
chat-workbench-main/cli/src/: cli.rs  config.rs  main.rs
chat-workbench-main/cli/src/commands/: config.rs  deploy.rs  deps.rs  dev.rs  doctor.rs  env.rs  init.rs  mod.rs
chat-workbench-main/cli/src/utils/: executor.rs  logger.rs  mod.rs  prompts.rs
chat-workbench-main/docs/: API-REFERENCE.md  ARCHITECTURE.md  CI-CD-PIPELINE.md  CONFIGURATION-REFERENCE.md  GETTING-STARTED.md  README.md
chat-workbench-main/docs/guides/: AUTHENTICATION_FLOW.md  CREATING_EXAMPLES.md  TASK_HANDLERS.md  TRACING.md
chat-workbench-main/examples/rag_oss/: config.yaml  pyproject.toml
chat-workbench-main/examples/rag_oss/data/: 40629431.txt  40630538.txt  40630680.txt  40630747.txt  40634495.txt  40634509.txt  40634510.txt  40634536.txt  40634759.txt  40635108.txt  40637064.txt  40640822.txt  40641327.txt  40641930.txt  40642068.txt  40646119.txt  40646417.txt  40650126.txt  40651974.txt  40652157.txt  40652278.txt
chat-workbench-main/examples/rag_oss/scripts/: 01_prepare_data.py  02_hydrate_oss.py
chat-workbench-main/infrastructure/cdk/: README.md  cdk.json  jest.config.js  package-lock.json  package.json  tsconfig.json
chat-workbench-main/infrastructure/cdk/lib/: api-stack.ts  chat-workbench-stage.ts  compute-stack.ts  data-stack.ts  distribution-stack.ts  infrastructure-stack.ts  schema.ts  ui-stack.ts  utils.ts  vpc-stack.ts  waf-regional-stack.ts
chat-workbench-main/infrastructure/cdk/test/: cdk.test.ts
chat-workbench-main/infrastructure/docker/backend/: Dockerfile
chat-workbench-main/infrastructure/grafana/dashboards/: api_performance.json  app_metrics.json  client_metrics.json  http_metrics.json  overview.json
chat-workbench-main/infrastructure/keycloak/: README.md  realm-export.json
chat-workbench-main/infrastructure/prometheus/: prometheus.yml
chat-workbench-main/infrastructure/prometheus/rules/: alerts.yml
chat-workbench-main/scripts/: build_and_push_containers.sh  create_self_signed_cert.sh  deploy_cloudshell.sh  install_cli.sh  isengard_local_dev_setup.sh  mirror_images.sh  setup_ddb.py
chat-workbench-main/ui/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  middleware.ts  next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.ts
chat-workbench-main/ui/app/: globals.css  layout.tsx  metadata.ts  not-found.tsx  page.tsx  typography.css
chat-workbench-main/ui/app/chat/: layout.tsx  not-found.tsx
chat-workbench-main/ui/components/auth/: admin-guard.tsx  auth-guard.tsx  auth-initializer.tsx  auth-status.tsx  auth-ui.tsx  login-button.tsx  logout-button.tsx
chat-workbench-main/ui/components/chat/: chat-header.tsx  chat.tsx  file-viewer-modal.tsx  message.tsx  status-progress-panel.tsx  websocket-citation-handler.tsx
chat-workbench-main/ui/components/landing/: landing-page.tsx
chat-workbench-main/ui/components/providers/: message-provider.tsx  query-provider.tsx
chat-workbench-main/ui/components/settings/: index.ts  settings-dialog.tsx
chat-workbench-main/ui/components/sidebar/: chat-item.tsx  sidebar.tsx
chat-workbench-main/ui/components/ui/: alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  button.tsx  cached-logo.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  markdown.module.css  markdown.tsx  progress.tsx  radio-group.tsx  scroll-area.tsx  search-input.tsx  select.tsx  separator.tsx  tabs.tsx  textarea.tsx  theme-provider.tsx  theme-toggle.tsx  toast.tsx  toaster.tsx  toggle-group.tsx  use-toast.ts
chat-workbench-main/ui/hooks/: use-chat-api.ts  use-default-model.ts  use-files.ts  use-media-query.ts  use-models.ts  use-personas.ts  use-prompts.ts  use-task-handlers.ts  use-user-profile.ts
chat-workbench-main/ui/hooks/auth/: README.md  index.ts  use-auth-config.ts  use-auth-provider.tsx  utils.ts
chat-workbench-main/ui/lib/: auth-actions.ts  constants.ts  dal.ts  react-query.ts  session.ts  types.ts  utils.ts
chat-workbench-main/ui/lib/api/: client.ts  index.ts  types.ts
chat-workbench-main/ui/lib/auth/: auth-interceptor.ts  auth-manager.ts
chat-workbench-main/ui/scripts/: create-dev-config.cjs  fetch-ssm.cjs  startup.sh  static-server.cjs
(+181 files in other folders)
