[project]
name = "rag-oss-demo"
version = "0.1.0"
description = "RAG OSS Demo for Chat Workbench"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "langchain>=0.1.0",
    "langchain-aws>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "opensearch-py>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
